--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.gane</groupId>
 	<artifactId>Hateoas</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>Hateoas</name>
 	<description>Demo project for Spring Boot</description>
 
